deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tracker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-tracker
  template:
    metadata:
      labels:
        app: finance-tracker
    spec:
      containers:
        - name: finance-tracker
          image: finance-tracker-web:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
