service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: NodePort
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
